# sg_ws

./: MUJOCO_LOG.TXT  ReadMe  ReadMe - Allegro  Readme - Robotiq with senseglove  Readme - Robotiq with senseglove (copy)
devel/: .catkin  _setup_util.py  setup.sh
devel/lib/allegro_hand/: allegro_hand_uname  detect_pcan.py
devel/lib/allegro_hand_controllers/: allegro_node_grasp  allegro_node_pd  allegro_node_sim  allegro_node_torque  allegro_node_velsat
devel/lib/allegro_hand_keyboard/: allegro_hand_keyboard  allegro_hand_keyboard_node
devel/lib/mujoco_menagerie/: sg_control.py  sg_control_allegro_left.py  sg_control_robotiq_left.py  sg_control_robotiq_right.py  sg_control_shadow.py  sg_control_shadow_left.py  sg_control_shadow_right.py  sg_control_test_ball.py
devel/lib/pkgconfig/: allegro_hand.pc  allegro_hand_controllers.pc  allegro_hand_description.pc  allegro_hand_driver.pc  allegro_hand_keyboard.pc  allegro_hand_parameters.pc  bhand.pc  cameras.pc  data_recording.pc  delay.pc  delays.pc  epfl_allegro_launchers.pc  fingertips.pc  launch.pc  mujoco_menagerie.pc  polaris.pc  robotiq_2f_gripper_control.pc  robotiq_ethercat.pc  robotiq_ft_sensor.pc  robotiq_modbus_rtu.pc  robotiq_modbus_tcp.pc
devel/lib/polaris/: polaris_node.py
devel/lib/python3/dist-packages/allegro_hand/: __init__.py
devel/lib/python3/dist-packages/robotiq_2f_gripper_control/: __init__.py
devel/lib/python3/dist-packages/robotiq_modbus_rtu/: __init__.py
devel/lib/python3/dist-packages/robotiq_modbus_tcp/: __init__.py
devel/lib/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_node
devel/lib/robotiq_ft_sensor/: rq_sensor  rq_test_sensor
devel/share/allegro_hand/cmake/: allegro_handConfig.cmake
devel/share/allegro_hand_controllers/cmake/: allegro_hand_controllersConfig.cmake
devel/share/allegro_hand_description/cmake/: allegro_hand_descriptionConfig.cmake
devel/share/allegro_hand_driver/cmake/: allegro_hand_driverConfig.cmake
devel/share/allegro_hand_keyboard/cmake/: allegro_hand_keyboardConfig.cmake
devel/share/allegro_hand_parameters/cmake/: allegro_hand_parametersConfig.cmake
devel/share/bhand/cmake/: bhandConfig.cmake
devel/share/cameras/cmake/: camerasConfig.cmake
devel/share/data_recording/cmake/: data_recordingConfig.cmake
devel/share/delay/cmake/: delayConfig.cmake
devel/share/delays/cmake/: delaysConfig.cmake
devel/share/epfl_allegro_launchers/cmake/: epfl_allegro_launchersConfig.cmake
devel/share/fingertips/cmake/: fingertipsConfig.cmake
devel/share/launch/cmake/: launchConfig.cmake
devel/share/mujoco_menagerie/cmake/: mujoco_menagerieConfig.cmake
devel/share/polaris/cmake/: polarisConfig.cmake
devel/share/robotiq_2f_gripper_control/cmake/: robotiq_2f_gripper_control-msg-extras.cmake  robotiq_2f_gripper_control-msg-paths.cmake  robotiq_2f_gripper_controlConfig.cmake
devel/share/robotiq_ethercat/cmake/: robotiq_ethercatConfig.cmake
devel/share/robotiq_ft_sensor/cmake/: robotiq_ft_sensor-msg-paths.cmake  robotiq_ft_sensorConfig.cmake
devel/share/robotiq_modbus_rtu/cmake/: robotiq_modbus_rtuConfig.cmake
devel/share/robotiq_modbus_tcp/cmake/: robotiq_modbus_tcpConfig.cmake
devel/share/roseus/ros/robotiq_2f_gripper_control/: manifest.l
devel/share/roseus/ros/robotiq_ft_sensor/: manifest.l
output/: data_P0_FB0.csv  data_P0_FB3.csv  data_P2_FB1.csv  data_P2_FB2.csv  data_P3_FB0.csv  data_P3_FB1.csv
sg_connect/: sgc_L.sh  sgc_R.sh  sgd_L.sh  sgd_R.sh
sg_run/: CMakeLists.txt  main  main.cpp
src/cameras/: CMakeLists.txt  cam1.py  cam1_show.py
src/data_recording/: CMakeLists.txt  package.xml
src/data_recording/src/: record.py
src/delay/: CMakeLists.txt  package.xml
src/fingertips/: CMakeLists.txt
src/fingertips/src/: VisualFeedback.py  fingertip_contact_pub.py
src/iiwaPy3/python_client/: Getters.py  PTP.py  Setters.py  iiwaClose.py  iiwaPy3.py  iiwa_directServoCart.py  iiwa_grasp.py  iiwa_left.py  keyTest.py  mySock.py  test.py
src/launch/: SENSEGLOVE_MJC.launch  SG.launch  SG_ROB.launch  launch_kuka.sh  launch_sg.sh  package.xml  reset_delay.launch  restart.launch  run_kuka.sh  setup.launch
src/polaris/: CMakeLists.txt
src/polaris/data/: LeftHand.crm  LeftHand.rom  ReferenceMarker.crm  ReferenceMarker.rom  RightHand.crm  RightHand.rom
src/polaris/sksurgerynditracker/: _version.py  demo.py  polaris3dplot.py  polaris_node (copy).py
src/senseglove/: senseglove_node.cpp
