<?xml version="1.0"?>
<package format="2">
  <name>data_recording</name>
  <version>0.0.0</version>
  <description>Package to to record data</description>
  <maintainer email="jl17783@bristol.ac.uk">joe louca</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend> 

</package>
